- Added new project pack that demonstrates rotary control with Zerosquare's player. Thanks to OMF for this.
- Buildlink will now delete the cached files in the build folder if assets.txt is newer than any single generated file. Hopefully this will take care of old or wrongly produced cached files.
- Converted all tabs to spaces in .bas files so they can be compiled under wine on linux (and other platforms). For some reason the rb+ compiler was mangling tabs. Thanks to Christos for reporting this fix!
- Added new project pack that demonstrates how packing and unpacking resources works. Thanks to OMF for this.
- Added WORD, BYTE, UWORD, UBYTE types (use caps to access them for now)
- Fixed a long standing bug in RPRINT: essentially basic_r_size and basic_r_indx were swapped. Many thanks to OMF for the fix!
- Fixed a small bug when importing generic assets ("_end" label was not exported).
- Introduced an alternative to rsetobj/rgetobj: users can now do rlist[object].index=value instead of rsetobj and myval=rlist[object].index which is faster in execution too.
  Updated nyandodge to demonstrate the new feature.
- Project chessboard added.
- New function: rbsort(table,no_of_indices) will sort an array of longwords from smallest to largest. Only longwords (4 byte integers) for now.
- BUILD.bat now outputs build.log to console in case of error instead of opening notepad. Also fixed a bug in BUILD.bat that would continue the build process in abs mode if linking failed.
- Added a quick reference guide (incomplete).
- Fixed the stock fonts in all projects
- Assets can now be packed. Suffix field C with "_pack" in assets.txt
- New command powaunpack(source_address,destination_address) will unpack data from source_address to destination_address. Note that it's your responsibility to reserve enough RAM for unpacking. Also, no checking to see if a packed asset exists at the source address - again it's your responsibility!