@@ -44,6 +44,7 @@ extern short raptor_ntsc_flag asm("raptor_ntsc_flag");
 extern long raptor_vbl_time_remain asm("raptor_vbl_time_remain");
 extern long raptor_user_savedata asm("raptor_user_savedata");
 extern void rbsort(void *base,size_t nmemb) asm("rbsort");
+extern int raptor_blitter_use(int command) asm("raptor_blitter_use");
 
 //Zerosquare player equates
 #define Zero_Chan_Format_Shift      30
