@@ -88,7 +88,7 @@ raptor_init_table:
 	dc.l	0								; sprite_animspd				; frame delay between animation changes
 	dc.l	0								; sprite_maxframe				; number of frames in animation chain
 	dc.l	ani_rept						; sprite_animloop				; repeat or play once
-	dc.l	edge_wrap						; sprite_wrap					; wrap on screen exit, or remove
+	dc.l	edge_ignore						; sprite_wrap					; wrap on screen exit, or remove
 	dc.l	spr_inf							; sprite_timer					; frames sprite is active for (or spr_inf)
 	dc.l	spr_linear						; sprite_track					; use 16.16 xadd/yadd or point to 16.16 x/y table
 	dc.l	0								; sprite_tracktop				; pointer to loop point in track table (if used)
@@ -127,7 +127,7 @@ raptor_init_table:
 	dc.l	0								; sprite_animspd				; frame delay between animation changes
 	dc.l	0								; sprite_maxframe				; number of frames in animation chain
 	dc.l	ani_rept						; sprite_animloop				; repeat or play once
-	dc.l	edge_wrap						; sprite_wrap					; wrap on screen exit, or remove
+	dc.l	edge_ignore						; sprite_wrap					; wrap on screen exit, or remove
 	dc.l	spr_inf							; sprite_timer					; frames sprite is active for (or spr_inf)
 	dc.l	spr_linear						; sprite_track					; use 16.16 xadd/yadd or point to 16.16 x/y table
 	dc.l	0								; sprite_tracktop				; pointer to loop point in track table (if used)
